# Alpha_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  README.md
ScriptEngine/: CMakeLists.txt  CMakeLists.txt.bak
ScriptEngine/Engine/: CMakeLists.txt  CMakeLists.txt.bak  GenerateInternalCMake.py
ScriptEngine/Engine/Snippets/: LogInfoSnippet.snippet
ScriptEngine/Engine/internal/API/: CMakeLists.txt  ExportPropety.h
ScriptEngine/Engine/internal/ComponentSystem/: CMakeLists.txt  Collider2D.cpp  Collider2D.h  Component.cpp  Component.h  ComponentFabric.h  LuaScript.cpp  LuaScript.h  Script.h  Transform.cpp  Transform.h
ScriptEngine/Engine/internal/ComponentSystem/src/: Collider2D.cpp  Collider2D.h  Component.cpp  Component.h  ComponentFabric.h  LuaScript.cpp  LuaScript.h  Script.h  Transform.cpp  Transform.h
ScriptEngine/Engine/internal/Containers/: CMakeLists.txt  UniversalDictionaryInterface.h
ScriptEngine/Engine/internal/DependencyResolvers/: CMakeLists.txt  DependencyList.cpp  DependencyList.h
ScriptEngine/Engine/internal/EventSystem/: CMakeLists.txt  InitializeEventsInterface.cpp  InitializeEventsInterface.h
ScriptEngine/Engine/internal/EventSystem/src/: InitializeEventsInterface.cpp  InitializeEventsInterface.h
ScriptEngine/Engine/internal/GameTypes/: CMakeLists.txt  GameObject.cpp  GameObject.h
ScriptEngine/Engine/internal/Input/: CMakeLists.txt  Input.cpp  Input.h
ScriptEngine/Engine/internal/Input/src/: Input.cpp  Input.h
ScriptEngine/Engine/internal/Logging/: CMakeLists.txt  Clerk.h
ScriptEngine/Engine/internal/Physics/: CMakeLists.txt  Physics.cpp  Physics.h  Raycast.cpp  Raycast.h
ScriptEngine/Engine/internal/Physics/src/: Physics.h  Raycast.cpp  Raycast.h
ScriptEngine/Engine/internal/Resources/: CMakeLists.txt  Mesh.cpp  Mesh.h  ResourceBase.cpp  ResourceBase.h  ResourceManager.cpp  ResourceManager.h  Serializer.cpp  Serializer.h
ScriptEngine/Engine/internal/Tools/: CMakeLists.txt  CompileTimeHash.h  StringFuncs.h  Timer.h  VariadicComparer.h  casts.h
ScriptEngine/Engine/internal/UI/: Button.cpp  Button.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ColorBuffer.h  Panel.cpp  Panel.h  UIelement.cpp  UIelement.h
ScriptEngine/Engine/internal/UI/src/: Button.cpp  Button.h  Canvas.cpp  Panel.cpp  Panel.h  Text.h  UIelement.cpp  UIelement.h
ScriptEngine/Engine/src/: EngineMain.cpp  EngineMain.h  ExportPropety.h  Timer.cpp  Timer.h  main.cpp
ScriptEngine/Engine/src/Algorithms/: Node.h
ScriptEngine/Engine/src/Components/: Component.cpp  Component.h  LuaScript.cpp  LuaScript.h  Transform.cpp  Transform.h
ScriptEngine/Engine/src/Components/Physics/: Collider.cpp  Collider.h
ScriptEngine/Engine/src/GLPref/: GLPref.cpp  GLPref.h
ScriptEngine/Engine/src/GameTypes/: GameObject.cpp  GameObject.h  GameTypes.pch
ScriptEngine/Engine/src/Helpers/: StringFuncs.h  casts.cpp  casts.h  vector2.h  vector3.h
ScriptEngine/Engine/src/Input/: Input.cpp  Input.h
ScriptEngine/Engine/src/Logging/: Clerk.cpp  Clerk.h  Logger.cpp  Logger.h
ScriptEngine/Engine/src/Physics/: Collider.h
ScriptEngine/Engine/src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  RendererObjects.pch  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
ScriptEngine/Engine/src/Resources/: Mesh.cpp  Mesh.h  ResourceBase.h  ResourceManager.cpp  ResourceManager.h  Serializer.cpp  Serializer.h
ScriptEngine/Engine/src/Scene/: Camera.h  Hierarchy.cpp  Hierarchy.h  SceneManager.cpp  SceneManager.h
ScriptEngine/Engine/src/UI/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  ColorBuffer.h  UI.pch  UIelement.cpp  UIelement.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
ScriptEngine/res/: imgui.ini
ScriptEngine/res/saves/GameObjects/Another/: Another.json
ScriptEngine/res/saves/GameObjects/Bishop/: Bishop.json
ScriptEngine/res/saves/GameObjects/BlackBishop1/: BlackBishop1.json
ScriptEngine/res/saves/GameObjects/BlackBishop2/: BlackBishop2.json
ScriptEngine/res/saves/GameObjects/BlackCastle1/: BlackCastle1.json
ScriptEngine/res/saves/GameObjects/BlackCastle2/: BlackCastle2.json
ScriptEngine/res/saves/GameObjects/BlackKing1/: BlackKing1.json
ScriptEngine/res/saves/GameObjects/BlackKnight1/: BlackKnight1.json
ScriptEngine/res/saves/GameObjects/BlackKnight2/: BlackKnight2.json
ScriptEngine/res/saves/GameObjects/BlackPawn1/: BlackPawn1.json
ScriptEngine/res/saves/GameObjects/BlackPawn2/: BlackPawn2.json
ScriptEngine/res/saves/GameObjects/BlackPawn3/: BlackPawn3.json
ScriptEngine/res/saves/GameObjects/BlackPawn4/: BlackPawn4.json
ScriptEngine/res/saves/GameObjects/BlackPawn5/: BlackPawn5.json
ScriptEngine/res/saves/GameObjects/BlackPawn6/: BlackPawn6.json
ScriptEngine/res/saves/GameObjects/BlackPawn7/: BlackPawn7.json
ScriptEngine/res/saves/GameObjects/BlackPawn8/: BlackPawn8.json
ScriptEngine/res/shaders/: frag.spv  shader.frag  shader.vert  shaders.json  vert.spv
ScriptEngine/res/shaders/shadersCOpy/: shader.frag  shader.vert
ScriptEngine/src/: ClassRegistrator.cpp  ClassRegistrator.h  Headers.h  LuaParser.cpp  LuaParser.h  ScriptEngine.cpp  ScriptEngine.h
ScriptEngine/src/API/: EngineAPI.h  ExportProperty.h
Test2/: CMakeLists.txt
Test2/ScriptEngine/: CMakeLists.txt
Test2/ScriptEngine/Engine/: .gitignore  CMakeLists.txt
Test2/ScriptEngine/Engine/src/: EngineMain.cpp  EngineMain.h
Test2/ScriptEngine/src/: ClassRegistrator.cpp  ClassRegistrator.h  Headers.h  LuaParser.cpp  LuaParser.h  ScriptEngine.cpp  ScriptEngine.h
Test2/res/: scene.json
Test2/res/components/scripts/: button.lua  move.lua  some.lua
Test2/res/default/: main.json  shaders.json  sprites.json  textureAtlasses.json  textures.json
Test2/res/saves/: GameObjects.json
Test2/res/scripts/: Components.lua  Desk.lua  GObject_test.lua  function_test.lua  move.lua
Test2/res/shaders/: fragment_sprite.txt  vertex.txt
Test2/src/: main.cpp
src/: API.h  (+3 more)
(+319 files in other folders)
